# corp-os-meta

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REPORT.md  README.md  cli.py  pyproject.toml
.claude/rules/: python-env.md  testing.md
corp_os_meta/: __init__.py  cli.py  models.py  normalize.py  overlays.py  products.py  taxonomy.yaml  utils.py  validate.py
corp_os_meta/data/: products.yaml  source_tiers.yaml
tasks/: lessons.md  todo.md
tests/: test_api_keys.py  test_deep_extraction.py  test_dimensions.py  test_models.py  test_normalize.py  test_preprocess.py  test_products.py  test_utils.py  test_validate.py
