[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corp_os_meta"
version = "1.0.0"
description = "Shared metadata schema and taxonomy for corp-by-os agent ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
corp-meta = "cli:main"
